break out add new raid into component

--- a/client/src/app/create-raid/create-raid.component.html
+++ b/client/src/app/create-raid/create-raid.component.html
@@ -1,3 +1,11 @@
-<p>
-  create-raid works!
-</p>
+MEATup Name
+
+            Required Ingredients
+
+            Style of Dish
+
+            Ingredient Acquisition Start Time
+
+            MEATup Time
+
+            MEATup Location
