--- a/client/src/app/raid-list/raid-list.component.html
+++ b/client/src/app/raid-list/raid-list.component.html
@@ -1,3 +1,8 @@
-<p>
-  raid-list works!
-</p>
+<div class="accordion" id="activeRaidsList">
+  <app-raid-description>
+  </app-raid-description>
+  <app-raid-description>
+  </app-raid-description>
+  <app-raid-description>
+  </app-raid-description>
+</div> <!-- END #accordionExample -->
