--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-title-screen></app-title-screen>
-
+<!--<app-title-screen></app-title-screen>-->
 <ul>
     <li class="text" style="display:unset" *ngFor="let item of items | async">
         <p>
@@ -9,3 +8,4 @@
     </li>
 </ul>
 <!--<router-outlet></router-outlet>-->
+<app-road-kill-locator></app-road-kill-locator>
