--- a/client/src/app/create-raid/create-raid.component.html
+++ b/client/src/app/create-raid/create-raid.component.html
@@ -49,7 +49,8 @@
   <div class="form-group">
     <label for="MEATupLocation">MEATup Location</label>
     <input type="text" class="form-control" id="MEATupLocation" placeholder="Set the location to meet at">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3095.850003633306!2d-84.51781968514916!3d39.109884979538386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8841b3fd94c8f02b%3A0x3caee5bfc65866b3!2sUnion+Hall!5e0!3m2!1sen!2sus!4v1541886963670" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3095.850003633306!2d-84.51781968514916!3d39.109884979538386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8841b3fd94c8f02b%3A0x3caee5bfc65866b3!2sUnion+Hall!5e0!3m2!1sen!2sus!4v1541886963670" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>-->
+    <app-road-kill-locator></app-road-kill-locator>
   </div>
   <button type="submit" class="btn brn-block btn-primary">Create MEATup</button>
 </form>
