/create-raid: dish page build

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-title-screen></app-title-screen>
+<!--<app-title-screen></app-title-screen>-->
+<app-dish></app-dish>
+
 <ul>
     <li class="text" style="display:unset" *ngFor="let item of items | async">
         <p>
