--- a/client/src/app/ingredients-list/ingredients-list.component.html
+++ b/client/src/app/ingredients-list/ingredients-list.component.html
@@ -1,3 +1,33 @@
-<p>
-  ingredients-list works!
-</p>
+<form>
+  <ul class="list-group" id="ingredients">
+    <li class="list-group-item list-group-item-success">
+      <i class="fas fa-check push-right"></i>
+      <app-ingredient-description>
+      </app-ingredient-description>
+    </li>
+    <li class="list-group-item list-group-item-success">
+      <i class="fas fa-check push-right"></i>
+      <app-ingredient-description>
+      </app-ingredient-description>
+    </li>
+    <li class="list-group-item">
+      <app-ingredient-description>
+      </app-ingredient-description>
+    </li><li class="list-group-item">
+      <app-ingredient-description>
+      </app-ingredient-description>
+    </li>
+  </ul> <!-- END #ingredients -->
+</form>
+
+<form>
+  <div class="form-group">
+    <label for="Ingredients">Add Ingredients</label>
+    <div class="input-group">
+      <input type="text" id="IngredientsAdd" class="form-control" placeholder="Add Ingredient">
+      <div class="input-group-append">
+        <button class="btn btn-secondary" type="button" id="button-AddIngredient">+</button>
+      </div>
+    </div>
+  </div>
+</form>
