--- a/client/src/app/road-kill-locator/road-kill-locator.component.html
+++ b/client/src/app/road-kill-locator/road-kill-locator.component.html
@@ -8,3 +8,48 @@
     </agm-info-window>
   </agm-marker>
 </agm-map>
+<button class="btn btn-outline-primary" type="button" data-toggle="collapse" data-target="#RoadkillMapFilter" aria-expanded="false" aria-controls="RoadkillMapFilter">
+  Filter Roadkill
+</button>
+
+<div class="collapse" id="RoadkillMapFilter">
+  <div class="card card-body">
+    <form>
+      <div class="form-group">
+        <label for="RoadkillFilterSpecies">Animal Species</label>
+        <select multiple class="form-control" id="RoadkillFilterSpecies">
+          <option>Cat</option>
+          <option>Dog</option>
+          <option>Deer</option>
+          <option>Squirril</option>
+          <option>Whale</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="RoadkillFilterDistance">Distance From Me</label>
+        <div class="row">
+          <div class="col-sm-1 text-right">
+            <small>0 mi</small>
+          </div>
+          <input type="range" class="col-sm-10 form-control-range custom-range" min="0" max="50" step="5" id="RoadkillFilterDistance">
+          <div class="col-sm-1">
+            <small>50 mi</small>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="RoadkillFilterFreshness">Freshness</label>
+        <div class="row">
+          <div class="col-sm-1 text-right">
+            <small>1 day</small>
+          </div>
+          <input type="range" class="col-sm-10 form-control-range custom-range" min="0" max="7" step="1" id="RoadkillFilterFreshness">
+          <div class="col-sm-1">
+            <small>7 days</small>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-primary">Apply Filter</button>
+    </form>
+  </div>
+</div>
