connected the creat form to the db

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!--<app-title-screen></app-title-screen>-->
+<app-title-screen></app-title-screen>
 <app-dish></app-dish>
 
 <ul>
