--- a/client/src/app/raid-description/raid-description.component.html
+++ b/client/src/app/raid-description/raid-description.component.html
@@ -1,11 +1,14 @@
 <div class="card">
-	<div id="Header-MEATupID-12345" class="bg-secondary">
-    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse" data-target="#Collapse-MEATupID-12345" aria-expanded="false" aria-controls="Collapse-MEATupID-12345">
-      A Tasty MEATup Name&nbsp;&nbsp;&nbsp;<span class="badge badge-light">1d 4h 15m until start</span>&nbsp;&nbsp;&nbsp;<span class="badge badge-light">4/5 Members</span>
+  <div id="Header-MEATupID-12345" class="bg-secondary">
+    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse"
+            data-target="#Collapse-MEATupID-12345" aria-expanded="false" aria-controls="Collapse-MEATupID-12345">
+      A Tasty MEATup Name&nbsp;&nbsp;&nbsp;<span class="badge badge-light">1d 4h 15m until start</span>&nbsp;&nbsp;&nbsp;<span
+      class="badge badge-light">4/5 Members</span>
     </button>
   </div>
 
-  <div id="Collapse-MEATupID-12345" class="collapse" aria-labelledby="Header-MEATupID-12345" data-parent="#activeRaidsList">
+  <div id="Collapse-MEATupID-12345" class="collapse" aria-labelledby="Header-MEATupID-12345"
+       data-parent="#activeRaidsList">
     <div class="card-body">
       <h6>
         Preparation Style
