[ILWHackCincy2018-22] User profiles

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,6 +10,6 @@
     </li>
 </ul>
 
-
+<!--<app-login></app-login>-->
 <!--<router-outlet></router-outlet>-->
 <!--<app-road-kill-locator></app-road-kill-locator>-->
