integrate-with-roadkill-db

--- a/client/src/app/dish/dish.component.html
+++ b/client/src/app/dish/dish.component.html
@@ -7,5 +7,4 @@
 <h4>
   Find Roadkill
 </h4>
-<app-road-kill-locator>
-</app-road-kill-locator>
+<app-road-kill-locator [roadKillFromDb]="roadKillFromDb"></app-road-kill-locator>
