--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,20 +3,12 @@
     <h1>Hello {{ user.displayName }}!</h1>
     <button (click)="logout()">Logout</button>
     <app-title-screen></app-title-screen>
-    <app-dish></app-dish>
+    <app-dish [roadKillFromDb]="items"></app-dish>
 </div>
 <ng-template #showLogin>
     <p>Please login.</p>
     <app-login></app-login>
 </ng-template>
-
-<ul>
-    <li class="text" style="display:unset" *ngFor="let item of items | async">
-        <p>
-            {{item.name}}
-        </p>
-    </li>
-</ul>
 
 <!--<app-login></app-login>-->
 <!--<router-outlet></router-outlet>-->
