home and meatup pages modified to match data structure, high score page added

--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -14,9 +14,9 @@
           My MEATups
         </a>
         <div class="dropdown-menu" aria-labelledby="MyMEATups">
-          <a class="dropdown-item" href="#">A Tasty MEATup <span class="badge badge-success">MEAT Master</span></a>
-          <a class="dropdown-item" href="#">Another MEATup <span class="badge badge-danger">MEATer</span></a>
-          <a class="dropdown-item" href="#">The Final MEATup <span class="badge badge-danger">MEATer</span></a>
+          <a class="dropdown-item" href="#">A Tasty MEATup <span class="badge badge-success">Owner</span></a>
+          <a class="dropdown-item" href="#">Another MEATup <span class="badge badge-danger">Judge</span></a>
+          <a class="dropdown-item" href="#">The Final MEATup <span class="badge badge-info">Chef</span></a>
         </div>
       </li>
       <li class="nav-item">
