--- a/client/src/app/profile-page/profile-page.component.html
+++ b/client/src/app/profile-page/profile-page.component.html
@@ -21,6 +21,6 @@
     <a href="#">Another MEATup <span class="badge badge-danger">MEATer</span></a>
   </li>
   <li class="list-group-item">
-    <a href="#">The Final MEATup <span class="badge badge-danger">MEATer</span></a>
+    <a href="#">The Final MEATup <span class="badge badge-info">MEATer</span></a>
   </li>
 </ul>
