--- a/client/src/app/raid-description/raid-description.component.html
+++ b/client/src/app/raid-description/raid-description.component.html
@@ -1,9 +1,8 @@
 <div class="card">
-  <div id="Header-MEATupID-12345" class="bg-secondary">
-    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse"
-            data-target="#Collapse-MEATupID-12345" aria-expanded="false" aria-controls="Collapse-MEATupID-12345">
-      A Tasty MEATup Name&nbsp;&nbsp;&nbsp;<span class="badge badge-light">1d 4h 15m until start</span>&nbsp;&nbsp;&nbsp;<span
-      class="badge badge-light">4/5 Members</span>
+	<div id="Header-MEATupID-12345" class="bg-secondary">
+    <button class="btn btn-block btn-secondary collapsed" type="button" data-toggle="collapse" data-target="#Collapse-MEATupID-12345" aria-expanded="false" aria-controls="Collapse-MEATupID-12345">
+      A Tasty MEATup Name<br />
+      <span class="badge badge-light">1d 4h 15m <i class="far fa-clock"></i></span>&nbsp;&nbsp;&nbsp;<span class="badge badge-light">4/5 <i class="fas fa-user"></i></span>
     </button>
   </div>
 
