--- a/client/src/app/create-raid/create-raid.component.html
+++ b/client/src/app/create-raid/create-raid.component.html
@@ -11,23 +11,29 @@
       >
   </div>
   <div class="form-group">
-    <label for="size">Number of MEATers</label>
-    <select
-      class="form-control"
-      id="size"
-      name="size"
-      aria-describedby="MEATerCountHelpBlock"
-      [(ngModel)]="meatup.size">
+    <label for="JudgeCount">Number of Judges</label>
+    <select class="form-control" id="JudgeCount"aria-describedby="JudgeCountHelpBlock">
       <option>1</option>
       <option>2</option>
       <option>3</option>
       <option>4</option>
       <option>5</option>
     </select>
-    <small
-      id="MEATerCountHelpBlock"
-      class="form-text text-muted">
-  		How many MEATers you want to participate
+    <small id="JudgeCountHelpBlock" class="form-text text-muted">
+      How many judges you want to participate
+    </small>
+  </div>
+  <div class="form-group">
+    <label for="ChefCount">Number of Chefs</label>
+    <select class="form-control" id="MEATerCount"aria-describedby="ChefCountHelpBlock">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+    <small id="ChefCountHelpBlock" class="form-text text-muted">
+  		How many chefs you want to participate
 		</small>
   </div>
   <div class="form-group">
