--- a/client/src/app/meatup-page/meatup-page.component.html
+++ b/client/src/app/meatup-page/meatup-page.component.html
@@ -1,6 +1,53 @@
+<!-- Begin Edit section: only visible to owner, and only editable until start time -->
+<p>
+  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
+    Modify MEATup
+  </button>
+</p>
+
+<div class="collapse" id="newRaid">
+  <div class="card card-body">
+    <button class="btn btn-block btn-danger" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
+      Cancel Event
+    </button>
+    <app-create-raid>
+    </app-create-raid>
+  </div>
+</div>
+<!-- END Edit Section -->
+
 <h3>
   A Tasty MEATup
 </h3>
+
+<!-- Countdown to "Until Start" time, then switches to countdown to "Until Event" time after start time passes -->
+<h4>
+  1d 5h 4m Until Start
+</h4>
+
+<h4>
+  MEATers
+</h4>
+
+<ul class="list-group">
+  <li class="list-group-item">
+    Bill Bull <span class="badge badge-success">Owner</span>
+  </li>
+  <li class="list-group-item">
+    Sally Dollar <span class="badge badge-danger">Judge</span>
+  </li>
+  <li class="list-group-item">
+    Ralph Malf <span class="badge badge-info">Judge</span>
+  </li>
+</ul>
+
+<h4>
+  Preparation Style
+</h4>
+
+<p>
+  Possum Pasta
+</p>
 
 <h4>
   Ingredients
@@ -9,6 +56,7 @@
 <app-ingredients-list>
 </app-ingredients-list>
 
+<!-- Section only appears during preparation phase -->
 <h4>
   Protien Locator
 </h4>
@@ -16,6 +64,7 @@
 <app-road-kill-locator>
 </app-road-kill-locator>
 
+<!-- Section only appears during judgement phase and closed phase -->
 <h4>
   Dishes
 </h4>
@@ -24,7 +73,7 @@
 </app-dish-judgement>
 
 <h4>
-  Photos
+  Event Photos
 </h4>
 
 <div class="row">
