--- a/client/src/app/title-screen/title-screen.component.html
+++ b/client/src/app/title-screen/title-screen.component.html
@@ -8,34 +8,47 @@
   Where Roadkill Meats Meals
 </h2>
 
-<div class="row">
-  <div class="col-sm-10 offset-sm-1">
-    <p>
-      <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
-        Start A New MEATup
-      </button>
-    </p>
+<!-- BEGIN Start New Section, Only visible if not currently an owner of any MEATup -->
+<p>
+  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#newRaid" aria-expanded="false" aria-controls="newRaid">
+    Start A New MEATup
+  </button>
+</p>
 
-    <div class="collapse" id="newRaid">
-      <div class="card card-body">
-        <app-create-raid>
-        </app-create-raid> 
-      </div> <!-- END .card .card-body -->
-    </div> <!-- END .collapse -->
-  </div> <!-- END .col-xs-10 .offset-xs-1 -->
+<div class="collapse" id="newRaid">
+  <div class="card card-body">
+    <app-create-raid>
+    </app-create-raid> 
+  </div>
+</div>
+<!-- END Start New Section -->
 
-  <div class="col-sm-10 offset-sm-1">
-    <p>
-      <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#activeRaids" aria-expanded="false" aria-controls="activeRaids">
-        Join A MEATup
-      </button>
-    </p>
+<!-- BEGIN Judge Section, Only visible if not currently judge on MEATup with unvoted dishes -->
+<p>
+  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#judgeRaid" aria-expanded="false" aria-controls="judgeRaid">
+    Judge MEATup
+  </button>
+</p>
 
-    <div class="collapse" id="activeRaids">
-      <div class="card card-body">
-        <app-raid-list>
-        </app-raid-list> 
-      </div> <!-- END card card-body -->
-    </div> <!-- END #activeRaids -->
-  </div> <!-- END .col-xs-10 .offset-xs-1 -->
-</div> <!-- END .row -->
+<div class="collapse" id="judgeRaid">
+  <div class="card card-body">
+    <app-dish-judgement>
+    </app-dish-judgement> 
+  </div>
+</div>
+<!-- END Judge Section -->
+
+<!-- BEGIN Join Section -->
+<p>
+  <button class="btn btn-block btn-primary btn-lg" type="button" data-toggle="collapse" data-target="#activeRaids" aria-expanded="false" aria-controls="activeRaids">
+    Join A MEATup
+  </button>
+</p>
+
+<div class="collapse" id="activeRaids">
+  <div class="card card-body">
+    <app-raid-list>
+    </app-raid-list> 
+  </div>
+</div>
+<!-- END Join Section -->
