set-raid-location Set back to correct map

--- a/client/src/app/road-kill-locator/road-kill-locator.component.html
+++ b/client/src/app/road-kill-locator/road-kill-locator.component.html
@@ -30,7 +30,7 @@
           <option>Cat</option>
           <option>Dog</option>
           <option>Deer</option>
-          <option>Squirril</option>
+          <option>Squirrel</option>
           <option>Whale</option>
         </select>
       </div>
